환경설정 변경으로 인한 코드 수정